--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<html></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>WEB</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1>WEB</h1>
+        <ol>
+            <li>html</li>
+            <li>css</li>
+            <li>Javascript</li>
+        </ol>
+        <h2>html</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt alias reiciendis minus officiis, est inventore, accusantium enim expedita deleniti in labore ipsam praesentium aperiam quas vero, illo fugit dolores facilis!</p>
+    </body>
+</html>
