--- a/1.html
+++ b/1.html
@@ -11,7 +11,7 @@
             <li><a href="2.html">css</a></li>
             <li><a href="3.html">Javascript</a></li>
         </ol>
-        <h2>Welcome</h2>
+        <h2>html</h2>
         Hello World :) 
     </body>
 </html>
