--- a/1.html
+++ b/1.html
@@ -12,6 +12,7 @@
             <li><a href="3.html">Javascript</a></li>
         </ol>
         <h2>html</h2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse architecto officiis hic molestias ducimus modi quam aliquam fugit, aperiam eius necessitatibus cupiditate nisi alias minima voluptate facilis. Placeat, explicabo cumque?
+<p>Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications. With
+    Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.</p>
     </body>
 </html>
