--- a/2.html
+++ b/2.html
@@ -12,6 +12,8 @@
             <li><a href="3.html">Javascript</a></li>
         </ol>
         <h2>css</h2>
-        Hello World :) 
+<p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in
+    a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and
+    JavaScript</p>
     </body>
 </html>
