--- a/3.html
+++ b/3.html
@@ -12,6 +12,7 @@
             <li><a href="3.html">Javascript</a></li>
         </ol>
         <h2>Javascript</h2>
-        Hello World :) 
+<p>JavaScript (/ˈdʒɑːvəˌskrɪpt/),[7] often abbreviated as JS, is a high-level, interpreted programming language. It is
+    a language which is also characterized as dynamic, weakly typed, prototype-based and multi-paradigm.</p>
     </body>
 </html>
